--- a/src/components/HighlightContainer.css
+++ b/src/components/HighlightContainer.css
@@ -5,7 +5,7 @@
   height: min-content;
   margin-bottom: 2rem;
   transition: box-shadow 0.1s ease-in-out;
-  box-shadow: 10px 10px 0 var(--black-smoke);
+  box-shadow: 9px 10px 0 var(--black-smoke);
   border:  2px solid  var(--black-smoke);
   margin-right: 10px;
 }
@@ -15,14 +15,14 @@
 }
 
 .highlight-enthusiastic {
-  box-shadow: 10px 10px 0 var(--enthusiastic-smoke);
+  box-shadow: 9px 10px 0 var(--enthusiastic-smoke);
   border:  2px solid  var(--enthusiastic-smoke);
 }
 .highlight-curious {
-  box-shadow: 10px 10px 0 var(--curious-smoke);
+  box-shadow: 9px 10px 0 var(--curious-smoke);
   border:  2px solid  var(--curious-smoke);
 }
 .highlight-openminded {
-  box-shadow: 10px 10px 0 var(--openminded-smoke);
+  box-shadow: 9px 10px 0 var(--openminded-smoke);
   border:  2px solid  var(--openminded-smoke);
 }
